@@ -6,7 +6,7 @@ function Q = q_meso(freqmode)
 %---------------------------------------------------------------------------
 
 Q.FREQMODE           = freqmode;  
-Q.INVEMODE           = 'mesospheric';
+Q.INVEMODE           = 'meso';
 
 
 %---------------------------------------------------------------------------
